# RBAC

./: .gitignor  README.md  pyproject.toml
.svelte-kit/: ambient.d.ts
src/proyect/: auth.py  database.py  docker-compose.yml  init_test_db.py  init_users.py  main.py  models.py  rbac.py  schema.py
src/proyect/frontend/src/lib/icons/: eye.svg:Zone.Identifier
src/proyect/frontend/src/routes/gestion/: +page.svelte
src/proyect/frontend/src/routes/login/: +page.svelte
src/proyect/frontend/src/routes/protected/: +page.svelte
src/proyect/frontend/src/routes/register/: +page.svelte
tests/: conftest.py  test_user.py
